flux/clusters/pinkdiamond/haproxy-ingress/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: haproxy
  namespace: haproxy-ingress
spec:
  gatewayClassName: haproxy
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: thecluster-lan-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
